@@ -2,7 +2,9 @@
 #define NAMESPACE_H_
 
 #include <map>
+#include <vector>
 #include "inamespace.h"
+#include "iscenegraph.h"
 #include "uniquenames.h"
 #include "NameObserver.h"
 
@@ -12,6 +14,10 @@ class Namespace :
 	typedef std::map<NameCallback, NameObserver> Names;
 	Names m_names;
 	UniqueNames m_uniqueNames;
+	
+	// This is the list populated by gatherNamespaced(), see below
+	typedef std::vector<Namespaced*> NamespacedList;
+	NamespacedList _cloned;
 
 public:
 	void attach(const NameCallback& setName, const NameCallbackCallback& attachObserver);
@@ -20,6 +26,20 @@ public:
 	void makeUnique(const char* name, const NameCallback& setName) const;
 
 	void mergeNames(const Namespace& other) const;
+	
+	/** greebo: Collects all Namespaced nodes in the subgraph,
+	 * 			whose starting point is defined by <root>.
+	 * 			This stores all the Namespaced* objects into 
+	 * 			a local list, which can subsequently be used 
+	 * 			by mergeClonedNames().
+	 */
+	void gatherNamespaced(scene::Node& root);
+	
+	/** greebo: This moves all gathered Namespaced nodes into this
+	 * 			Namespace, making sure that all names are properly
+	 * 			made unique.
+	 */
+	void mergeClonedNames();
 }; // class BasicNamespace
 
 #endif /*NAMESPACE_H_*/
